add login, signup page, more assets

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -62,6 +62,14 @@ li {
     flex-direction: column;
 }
 
+.outer-wraper-100vh {
+    height: 100vh;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
 .slogan {
     font-family: 'thuphap1', Arial, Helvetica, sans-serif;
     color: #fff;
@@ -129,10 +137,70 @@ li {
 }
 
 /*login-form*/
+.login-wraper {
+    display: flex;
+    justify-content: center;
+}
 
 .login-form {
-    height: 300px;
-    width: 500px;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    border-radius: 10px 10px 10px 10px;
+    width: 90%;
+    max-width: 450px;
+    position: relative;
+    -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+    box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+    text-align: center;
+
+}
+
+.login-form form {
+    margin-bottom: 15px;
+}
+
+
+.login-form form input.normal-input{
+    background-color: #f6f6f6;
+    border: none;
+    color: #0d0d0d;
+    padding: 15px 32px;
+    text-align: center;
+    text-transform: capitalize;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px;
+    width: 85%;
+    border: 2px solid #f6f6f6;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+}
+
+.login-form form input[type=submit] {
+    background-color: #56baed;
+    border: none;
+    color: white;
+    padding: 15px 80px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 13px;
+    -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+    margin: 5px 20px 10px 20px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 /* card */
@@ -157,6 +225,7 @@ li {
 
 .nb-card-foot {
     padding-top: 15px;
+    border-top: 1px solid #e5e5e5;
 }
 
 /* footer */
