--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -58,7 +58,6 @@ section {
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
     margin: 5px 0;
 }
 
@@ -126,6 +125,9 @@ nav.nav-desktop ul.main-nav li a:hover {
 
 .web-name {
     color: #fff;
+    font-size: 12px;
+    font-family: 'thuphap1', Arial, Helvetica, sans-serif;
+
 }
 
     /*header bg */
@@ -158,7 +160,7 @@ nav.nav-desktop ul.main-nav li a:hover {
 }  */
 
 .div-outer {
-    margin-top: 107.58px;
+    margin-top: 121.58px;
 }
 
 .outer-wraper {
@@ -429,6 +431,10 @@ footer {
         position: absolute;
         top: -55px;
         left: 30%;
+    }
+
+    .menu-bar {
+        display: none;
     }
   }
 
