--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -15,6 +15,7 @@
 
 body, html {
     height: 100%;
+
 }
 
 main {
@@ -22,7 +23,9 @@ main {
 }
 
 body, nav {
-    font-family: "Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;
+    /* font-family: "Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif; */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, sans-serif;
+
     margin: 0;
     padding: 0;
     background: url('../img/old-page-bg.jpg');
@@ -47,19 +50,42 @@ li {
     margin-top: 20px;
 }
 
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome and Opera */
+  }
+
 nav {
     /* background: rgba(255,255,255,0.8); */
-    background: rgba(0,0,0,0.8);
-    position: fixed;
+    /* background: rgba(0,0,0,0.8); */
+    background: rgba(0,0,0);
+
+    /* position: fixed; */
     width: 100%;
     z-index: 100;
     top: 0;
 }
 
+.hidden {
+    display: none;
+}
 
+.show {
+    display: initial;
+}
 
 @font-face {
     font-family: 'thuphap1';
+    src: url('../fonts/UTM-ThuPhap-Thien-An')
+}
+
+@font-face {
+    font-family: 'thuphap2';
     src: url('../fonts/HL-thufap1-Unicode.ttf')
 }
 * {
@@ -73,12 +99,12 @@ nav {
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    padding: 5px 0;
+    padding-top: 5px;
 }
 
 .logo {
     width: 64px;
-
+    height: 64px;
 }
 
 .logo img {
@@ -89,6 +115,7 @@ nav {
 nav .container{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 nav .menu-bar {
@@ -96,7 +123,7 @@ nav .menu-bar {
     align-self: center;
 }
 
-nav.nav-desktop ul {
+.main-nav {
     display: flex;
     flex-flow: nowrap;
     flex-direction: row;
@@ -106,7 +133,7 @@ nav.nav-desktop ul {
     list-style-type: none;
 }
 
-nav.nav-desktop ul li a {
+.menu-bar li a {
     
     font-family: 'thuphap1';
     padding: 10px 20px;
@@ -118,7 +145,7 @@ nav.nav-desktop ul li a {
     width: 100px;
 }
 
-nav.nav-desktop ul.main-nav li a:hover {
+.menu-bar li a:hover {
     background-image: url('../img/resources/box.png');
     /* background: rgba(223, 158, 18, 0.815); */
     color: red;
@@ -144,6 +171,7 @@ nav.nav-desktop ul.main-nav li a:hover {
 .web-name {
     color: #fff;
     font-size: 12px;
+    padding-bottom: 10px;
     font-family: 'thuphap1', Arial, Helvetica, sans-serif;
 }
 
@@ -163,7 +191,7 @@ nav.nav-desktop ul.main-nav li a:hover {
 }
 
 .div-outer {
-    margin-top: 111.5px;
+    /* margin-top: 111.5px; */
 }
 
 .outer-wraper {
@@ -175,7 +203,7 @@ nav.nav-desktop ul.main-nav li a:hover {
 }
 
 .outer-wraper-100vh {
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .justify-content-center {
@@ -202,6 +230,22 @@ nav.nav-desktop ul.main-nav li a:hover {
     line-height: 65px;
     padding: 17px;
 }
+
+.btn-menu {
+    height: 40px;
+    width: 40px;
+    /* border: 1px solid #fff; */
+    padding: 5px;
+    display: none;
+    /* border-radius: 2px; */
+}
+
+.btn-menu img {
+    width: 100%;
+    height: 100%;
+}
+
+/* --- main header --- */
 
 .desktop-nav-wraper {
     background: url('../img/old-page-bg.jpg') top center no-repeat;
@@ -389,7 +433,8 @@ nav.nav-desktop ul.main-nav li a:hover {
     padding: 10px;
 }
 
-.user-rank table {
+.user-rank table,
+.my-result table {
     width: 100%;
     text-align: center;
 }
@@ -397,14 +442,15 @@ nav.nav-desktop ul.main-nav li a:hover {
 .user-rank table th {
     height: 40px;
     background: rgb(242, 231, 211);
-
 }
 
 .user-rank table td {
     height: 30px;
 }
 
-.user-rank tr:nth-child(2n) {
+
+.user-rank tr:nth-child(2n), 
+.my-result tr:nth-child(2n){
     background: rgb(242, 231, 211);
 }
 
@@ -412,6 +458,12 @@ nav.nav-desktop ul.main-nav li a:hover {
     border-radius: 20px;
 }
 
+.my-result table {
+}
+
+.my-result table tr {
+    border-bottom: 10px solid tomato;
+}
 
 /* footer */
 
@@ -425,10 +477,19 @@ footer {
     text-align: center;
 }
 
+.exam-manager .btn-close {
+    display: none;
+}
+
 /*reponsive*/
+.main-nav-mob {
+    display: none;
+}
 
 
 @media only screen and (max-width: 991px) {
+    /* --- header ----- */
+        /* nav */
     nav.nav-desktop ul li a {
     
         font-size: 14px;
@@ -436,16 +497,59 @@ footer {
     .slogan {
         align-content: center;
     }
+    .btn-menu {
+        display: initial;
+    }
+
+    .main-nav {
+        display: none;
+        /* visibility: hidden; */
+    }
+
+    .main-nav-mob {
+    display: initial;
+    height: 100vh;
+    width: 0;
+    position: fixed;
+    z-index: 115;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    }
+
+    .main-nav-mob li {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #818181;
+        display: block;
+        transition: 0.3s;
+      }
+
+    .main-nav-mob .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+        color: #fff;
+        text-decoration: none;
+      }
+
+    .main-nav-mob li {
+        margin-bottom: 30px;
+    }
+
+        /* --- body --- */
     .king-paper {
         width: 300px;
         height: 120px;
         position: absolute;
         top: -55px;
         left: 30%;
-    }
-
-    .menu-bar {
-        display: none;
     }
 
     .exam-manager {
@@ -456,6 +560,10 @@ footer {
         background: rgba(255, 255, 255, 0.7);
         width: initial !important;
     }
+    .exam-manager .btn-close {
+        display: initial;
+    }
+
     .exam-manager .btn-close {
         border: 1px solid tomato;
         color: #fff;
@@ -481,7 +589,7 @@ footer {
     }
 
     .menu-bar {
-        display: none;
+        /* display: none; */
     }
 }
   
