--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -188,11 +188,10 @@ nav .menu-bar {
     background-position: center center;
     /* transition: background-image 1000ms linear infinite; */
     background-size: cover;
-
 }
 
 #wraper-animation {
-    transition: background-image 1s ease-in-out;
+    transition: background-position 1s ease-in-out;
 }
 
 #wraper-animation {
@@ -205,7 +204,7 @@ nav .menu-bar {
         background-position: 0 0; 
     }
     to { 
-        background-position: 50 0;
+        background-position: 0 100;
     }
 
 
@@ -215,7 +214,7 @@ nav .menu-bar {
         background-position: 0 0; 
     }
     to { 
-        background-position: 50 0;
+        background-position: 0 100;
     }
 
 }
