reduce size of some  backgrounds

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -184,7 +184,7 @@ nav .menu-bar {
 }
 
 .wraper-bg {
-    background-image:  linear-gradient(to bottom right,rgba(0,47,75,0.7),rgba(220,66,37,0.7)), url('../img/backgrounds-wraper/bg-01-khue-van-cac-2.png');
+    background-image:  linear-gradient(to bottom right,rgba(0,47,75,0.7),rgba(220,66,37,0.7)), url('../img/backgrounds-wraper/bg-01-khue-van-cac-3.jpg');
     background-position: center center;
     /* transition: background-image 1000ms linear infinite; */
     background-size: cover;
