--- a/assets/styles/exam.css
+++ b/assets/styles/exam.css
@@ -187,6 +187,7 @@ table#flag-list {
   .submit-area {
       justify-self: center;
       margin-top: 20px;
+      margin-bottom: 20px;
   }
 
   #submit-test {
@@ -199,4 +200,9 @@ table#flag-list {
      margin: auto;
      text-align: center;
      font-size: 20px;
+  }
+
+  #submit-test:hover {
+      background: rgb(109, 25, 25);
+      cursor: pointer;
   }
