--- a/assets/styles/web-admin.css
+++ b/assets/styles/web-admin.css
@@ -152,12 +152,13 @@ ul.nav-top ul.user-setting {
 }
 
 .menu ul li {
-    padding: 10px 15px;
 }
 
 .menu li a {
     color: #fff;
     text-decoration: none;
+    padding: 10px 15px;
+    display: block;
 }
 
 .menu ul li i {
@@ -166,6 +167,7 @@ ul.nav-top ul.user-setting {
     padding: 5px;
     margin-right: 5px;
 }
+
 
 
 .menu ul li:hover {
@@ -183,6 +185,10 @@ ul.nav-top ul.user-setting {
 }
 
 /* card definition */
+
+.card-question {
+    padding: 15px;
+}
 
 .card-wrpr {
     position: relative;
@@ -321,12 +327,17 @@ form.login-form {
     display: none;
 }
 
+#question-place > .row{
+    margin-bottom: 15px;
+}
+
 
 @media only screen and (max-width: 768px) {
 
 
     .app-main > .menu {
         z-index: 1000;
+        left: -250px;
     }
 
     .hidden-slide {
