--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -63,7 +63,7 @@ li {
 nav {
     /* background: rgba(255,255,255,0.8); */
     /* background: rgba(0,0,0,0.8); */
-    background: rgba(0,0,0, 1);
+    background: #232323;
 
     /* position: fixed; */
     width: 100%;
@@ -454,7 +454,7 @@ nav .menu-bar {
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
-    top: 30px;
+    top: 16px;
 }
 
 .king-paper img {
@@ -521,10 +521,15 @@ footer {
     background-color: #232323;
     /* position: absolute; */
     /* bottom: 0; */
+    margin-top: 15px;
     width: 100%;
     height: 75px;
     color: #fff;
     text-align: center;
+}
+
+footer .copyright {
+    margin-top: 15px;
 }
 
 .exam-manager .btn-close {
